// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Job Details should render grid if grid is enabled in config 1`] = `
<div>
  <div
    class="job-details"
  >
    <div
      class="row"
    >
      <div
        class="col-8"
      >
        <ul
          class="nav nav-tabs nav-fill"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/time-series"
            >
              Time Series
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link active"
              href="/jobs/123/grid"
            >
              Grid
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/config"
            >
              Config
            </a>
          </li>
        </ul>
      </div>
      <div
        class="col-4"
      >
        <div
          class="job-meta"
        >
          <p>
            Job: 
            <code>
              123
            </code>
          </p>
          <ul
            class="tags"
            data-testid="tags"
          />
        </div>
      </div>
    </div>
    <div
      class="job-details-content"
    >
      <div
        class="grid-wrap"
      >
        <div
          class="multi-spinners"
          data-testid="loader"
          id="loader"
        >
          <div
            class="spinner-grow text-dark"
          />
          <div
            class="spinner-grow text-dark"
          />
          <div
            class="spinner-grow text-dark"
          />
          <div
            class="spinner-grow text-dark"
          />
          <div
            class="spinner-grow text-dark"
          />
          <div
            class="spinner-grow text-dark"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Job Details should render loader initially when no info received from socket 1`] = `
<DocumentFragment>
  <div
    class="job-details"
  >
    <div
      class="row"
    >
      <div
        class="col-8"
      >
        <ul
          class="nav nav-tabs nav-fill"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link active"
              href="/jobs/123/time-series"
            >
              Time Series
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/config"
            >
              Config
            </a>
          </li>
        </ul>
      </div>
      <div
        class="col-4"
      >
        <div
          class="job-meta"
        >
          <p>
            Job: 
            <code>
              123
            </code>
          </p>
          <ul
            class="tags"
            data-testid="tags"
          />
        </div>
      </div>
    </div>
    <div
      class="job-details-content"
    >
      <div
        class="multi-spinners"
        data-testid="loader"
        id="loader"
      >
        <div
          class="spinner-grow text-dark"
        />
        <div
          class="spinner-grow text-dark"
        />
        <div
          class="spinner-grow text-dark"
        />
        <div
          class="spinner-grow text-dark"
        />
        <div
          class="spinner-grow text-dark"
        />
        <div
          class="spinner-grow text-dark"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Job Details should render the config 1`] = `
<div>
  <div
    class="job-details"
  >
    <div
      class="row"
    >
      <div
        class="col-8"
      >
        <ul
          class="nav nav-tabs nav-fill"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/time-series"
            >
              Time Series
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link active"
              href="/jobs/123/config"
            >
              Config
            </a>
          </li>
        </ul>
      </div>
      <div
        class="col-4"
      >
        <div
          class="job-meta"
        >
          <p>
            Job: 
            <code>
              123
            </code>
          </p>
          <ul
            class="tags"
            data-testid="tags"
          />
        </div>
      </div>
    </div>
    <div
      class="job-details-content"
    >
      <pre>
        {
    "enable_citizen_state_messages": false,
    "tags": []
}
      </pre>
    </div>
  </div>
</div>
`;

exports[`Job Details should render the time series if the view is time-series 1`] = `
<div>
  <div
    class="job-details"
  >
    <div
      class="row"
    >
      <div
        class="col-8"
      >
        <ul
          class="nav nav-tabs nav-fill"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link active"
              href="/jobs/123/time-series"
            >
              Time Series
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/config"
            >
              Config
            </a>
          </li>
        </ul>
      </div>
      <div
        class="col-4"
      >
        <div
          class="job-meta"
        >
          <p>
            Job: 
            <code>
              123
            </code>
          </p>
          <ul
            class="tags"
            data-testid="tags"
          />
        </div>
      </div>
    </div>
    <div
      class="job-details-content"
    >
      <div
        class="multi-spinners"
        data-testid="loader"
        id="loader"
      >
        <div
          class="spinner-grow text-dark"
        />
        <div
          class="spinner-grow text-dark"
        />
        <div
          class="spinner-grow text-dark"
        />
        <div
          class="spinner-grow text-dark"
        />
        <div
          class="spinner-grow text-dark"
        />
        <div
          class="spinner-grow text-dark"
        />
      </div>
    </div>
  </div>
</div>
`;
